Changed the board to 2d array of Board Pieces, added the ability to split the stack